--- a/SubmittedAssignments/Vrushali-Gavali-130/css/style.css
+++ b/SubmittedAssignments/Vrushali-Gavali-130/css/style.css
@@ -13,7 +13,6 @@ body {
 }
 
 .card1-background {
-  /* Customize background styling as needed */
   background-color: #53140F;
   height: 100%;
 }
@@ -23,7 +22,7 @@ body {
   top: 12mm;
   width: 5mm;
   height: 27mm;
-  background: #EDB96E !important;
+  background: #EDB96E;
   position: absolute;
   z-index: 1;
 }
@@ -33,7 +32,7 @@ body {
   top: 45.5mm;
   width: 50mm;
   height: 5mm;
-  background: #EDB96E !important;
+  background: #EDB96E ;
   position: absolute;
   z-index: 1;
 }
@@ -43,7 +42,7 @@ body {
   top: 0;
   width: 50mm;
   height: 5mm;
-  background: #EDB96E !important;
+  background: #EDB96E;
   position: absolute;
   z-index: 1;
 }
@@ -53,7 +52,7 @@ body {
   top: 12mm;
   width: 7mm;
   height: 27mm;
-  background: #EDB96E !important;
+  background: #EDB96E;
   position: absolute;
   z-index: 1;
 }
@@ -97,29 +96,29 @@ body {
 }
 
 .party-job-title {
-  font-family: serif;
-  font-optical-sizing: auto;
-  font-size: 1.4em;
-  margin-top: -1pt;
+  position:absolute;
+  color: #CC9A93;
+  font-size:2mm;
+  left: 27mm;
+  top: 22.5mm;
 }
 
 .company {
-  position: relative;
-  top: 25mm;
-  left: 23mm;
-  font-family: "Roboto Slab", serif;
-  font-optical-sizing: auto;
-  font-weight: 100;
-  font-style: inherit;
-  width: 168pt;
-  font-size: 3mm;
-  color: white;
+    position: relative;
+    top: 25mm;
+    left: 28mm;
+    font-family: "Roboto Slab", serif;
+    font-optical-sizing: auto;
+    font-style: inherit;
+    width: 168pt;
+    font-size: 5pt;
+    color: white;
 }
 
 .party-phone {
   font-weight: bolder;
   font-family: "Roboto Slab", serif;
-  font-size: 1.3em;
+  font-size: 5.48mm;
   margin-top: 16pt;
   position: relative;
   top: 0pt;
@@ -129,7 +128,7 @@ body {
 .party-email {
   font-weight: bolder;
   font-family: "Roboto Slab", serif;
-  font-size: 1.3em;
+  font-size: 5.48mm;
   position: relative;
   top: 0pt;
   left: -14pt;
@@ -158,26 +157,41 @@ body {
   top: -13.5mm;
   font-size:2mm;
 }
-
+.party-phone{
+  font-family: "Roboto Slab", serif;
+    font-size: 6pt;
+    margin-top: 16pt;
+    position: absolute;
+    top: -5mm;
+    left: 47mm;
+    color: white;
+}
 .party-phone-lable {
   font-family: "Roboto Slab", serif;
-  font-size: 1.1em;
+  
   margin-top: -1pt;
   padding-left: 3pt;
 
 }
-
-.party-phone-number {
-  font-weight: normal;
+.party-email{
   font-family: "Roboto Slab", serif;
-  font-size: 1.1em;
+  position: relative;
+  top: -7mm;
+  left: 1mm;
+  font-size: 6pt;
+  color: white;
+}
+.party-phone-number {
+  
+  font-family: "Roboto Slab", serif;
+  
   margin-top: -1pt;
 
 }
 
 .party-email-lable {
   font-family: "Roboto Slab", serif;
-  font-size: 1.1em;
+  
   margin-top: -1pt;
   padding-left: 3pt;
 }
@@ -185,7 +199,7 @@ body {
 .party-email-address {
   font-weight: normal;
   font-family: "Roboto Slab", serif;
-  font-size: 1.1em;
+  
   margin-top: -1pt;
 
 }
@@ -201,7 +215,7 @@ body {
   top: 0;
   width: 40mm;
   height: 52mm;
-  background: #EDB96E !important;
+  background: #EDB96E;
 }
 
 .tri {
@@ -221,7 +235,7 @@ body {
   top: 0;
   width: 60mm;
   height: 52mm;
-  background: #53140F !important;
+  background: #53140F;
 }
 
 .band1 {
@@ -231,7 +245,7 @@ body {
   left: 47mm;
   z-index: 1;
   top: 7mm;
-  background-color: #53140F !important;
+  background-color: #53140F;
   transform: rotate(-21deg);
 }
 
@@ -240,7 +254,7 @@ body {
   top: 6.5mm;
   width: 1mm;
   height: 37.5mm;
-  background: #EDB96E !important;
+  background: #EDB96E;
   transform: rotate(-21deg);
   position: absolute;
   z-index: 1;
@@ -249,7 +263,6 @@ body {
 .card2-content {
   position: absolute;
   transform: translate(-30%, -50%);
-  /*text-align: center;*/
   color: #ffffff;
 }
 
@@ -264,15 +277,10 @@ body {
   text-align-last: inherit;
   position: relative;
   text-transform: uppercase;
-  line-height: 94%;
-  text-align-last: inherit;
-  position: relative;
   top: -17mm;
     left: 82mm;
-  /* font-style: oblique; */
   font-size: 4mm;
   color: #333;
-  text-transform: uppercase;
 }
 
 .org-slogan {
@@ -302,38 +310,40 @@ body {
 
 .org-address {
   position: absolute;
-  top: 4mm;
-  left: 38mm;
-  font-style: normal;
-  color:#333;
+    top: -16mm;
+    left: 31mm;
+    font-style: normal;
+    color: #333;
+    font-size: 8pt;
 }
 
 
 
 .org-email {
   position: absolute;
-  top: 4mm;
-  left: 34mm;
-  font-style: normal;
-  color:#333;
+    top: 0mm;
+    left: 27mm;
+    font-style: normal;
+    color: #333;
+    font-size: 3mm;
 }
 
 .org-phone {
   position: relative;
-    top: -32mm;
-    left: 2mm;
+  top: -17mm;
+  left: 5mm;
   font-style: normal;
-  /*font-size: 9pt;*/
-  color:#333;
+  font-size: 3mm;
+  color: #333;
 }
 
 .org-website {
   position: relative;
-  font-style: normal;
- /* font-size: 9pt;*/
-  color:#333;
-  top: -30mm;
-  left: 2mm;
+    font-style: normal;
+    font-size: 3mm;
+    color: #333;
+    top: -28mm;
+    left: 6mm;
   
 }
 .fa {
